Fix horizontal scrollbar and edit-button size

--- a/blocks/page.css
+++ b/blocks/page.css
@@ -8,6 +8,7 @@
   width: 100%;
   position: relative;
   margin: 0 auto;
+  box-sizing: border-box;
 }
 
 .page__content {
@@ -26,6 +27,11 @@
 
 @media screen and (max-width: 480px) {
   .page {
+    margin: 0;
+  }
+
+  .page__section {
+    max-width: 100%;
     padding: 0;
     margin: 0;
   }
